--- a/environment.yml
+++ b/environment.yml
@@ -10,9 +10,9 @@ dependencies:
   - jupyter_console
   - matplotlib
   - pint
+  - pip
   - pyqtgraph
   - python=3.6
+  - qcodes=0.1.11
   - qtpy
   - scipy
-  - pip:
-    - qcodes==0.1.11
