Minor mac issues

--- a/environment.yml
+++ b/environment.yml
@@ -5,14 +5,15 @@ channels:
   - defaults
 dependencies:
   - h5py
-  - ipykernel=4.10.0
+  - ipykernel
+  - ipython
   - jupyter
   - jupyter_console
   - matplotlib
   - pint
   - pip
   - pyqtgraph
-  - python=3.6
-  - qcodes=0.1.1
   - qtpy
   - scipy
+  - pip:
+    - qcodes
